--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,10 +17,10 @@
         "react"
     ],
     "rules": {
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
+        // "linebreak-style": [
+        //     "error",
+        //     "windows"
+        // ],
         "quotes": [
             "error",
             "double"
