--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dev-server.js",
-    "build": "node build.js"
+    "build": "node build.js",
+    "common": "webpack --config webpack.dll.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -54,6 +57,7 @@
     "ora": "^1.3.0",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.10",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
@@ -67,6 +71,7 @@
     "antd": "^3.1.6",
     "axios": "^0.17.1",
     "qs": "^6.5.1",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
